Style changes to TeX, including 1" margins

--- a/magicmethods.tex
+++ b/magicmethods.tex
@@ -1,5 +1,10 @@
 \documentclass[a4paper,11pt]{article}
 
+\title{A Guide to Python's Magic Methods}
+\author{Rafe Kettler}
+\date{\today}
+
+\usepackage{fullpage}
 \usepackage{underscore}
 \usepackage{listings}
 \lstloadlanguages{Python}
@@ -13,10 +18,6 @@ showstringspaces = false
 \newcommand{\code}[1]{\texttt{#1}}
 
 \begin{document}
-
-\title{A Guide to Python's Magic Methods}
-\author{Rafe Kettler}
-\date{2011}
 \maketitle
 
 \section{Introduction}
