--- a/magicmethods.tex
+++ b/magicmethods.tex
@@ -554,4 +554,63 @@ Our example is a \code{Slate}, which remembers what its values have been and whe
 
 The goal of this guide is to bring something to anyone that reads it, regardless of their experience with Python or object-oriented programming. If you're just getting started with Python, you've gained valuable knowledge of the basics of writing feature-rich, elegant, and easy-to-use classes. If you're an intermediate Python programmer, you've probably picked up some slick new concepts and strategies and some good ways to reduce the amount of code written by you and clients. If you're an expert Pythonista, you've been refreshed on some of the stuff you might have forgotten about and maybe picked up a few new tricks along the way. Whatever your experience level, I hope that this trip through Python's special methods has been truly magical (I couldn't resist the final pun).
 
+% Begin the appendix
+\newpage
+\section{Appendix: How to Call Magic Methods}
+
+Some of the magic methods in Python directly map to built-in functions; in this case, how to invoke them is fairly obvious. However, in other cases, the invocation is far less obvious. This appendix is devoted to exposing non-obvious syntax that leads to magic methods getting called.
+\begin{center}
+\begin{tabular}{| p{5cm} | p{5cm} | p{5cm} |}
+\hline
+$Magic\ Method$ & $When\ it\ gets\ invoked$ & $Explanation$\\
+\hline
+\code{__new__(cls [,...])} & \code{instance = MyClass(arg1, arg2)} & \code{__new__} is called on instance creation\\
+\hline
+\code{__init__(self [,...])} & \code{instance = MyClass(arg1, arg2)} & \code{__init__} is called on instance creation\\
+\hline
+\code{__cmp__(self, other)} & \code{self == other}, \code{self > other}, etc. & Called for any comparison\\
+\hline
+\code{__pos__(self)} & \code{+self} & Unary plus sign\\
+\hline
+\code{__neg__(self)} & \code{-self} & Unary minus sign\\
+\hline
+\code{__invert__(self)} & \code{~self} & Bitwise inversion\\
+\hline
+\code{__index__(self)} & \code{x[self]} & Conversion when object is used as index\\
+\hline
+\code{__nonzero__(self)} & \code{bool(self)} & Boolean value of the object\\
+\hline
+\code{__getattr__(self, name)} & \code{self.name \# name doesn't exist} & Accessing nonexistent attribute\\
+\hline
+\code{__setattr__(self, name, val)} & \code{self.name = val} & Assigning to an attribute\\
+\hline
+\code{__delattr__(self, name)} & \code{del self.name} & Deleting an attribute\\
+\hline
+\code{__getattribute(self, name)} & \code{self.name} & Accessing any attribute\\
+\hline
+\code{__getitem__(self, key)} & \code{self[key]} & Accessing an item using an index\\
+\hline
+\code{__setitem__(self, key, val)} & \code{self[key] = val} & Assigning to an item using an index\\
+\hline
+\code{__delitem__(self, key)} & \code{del self[key]} & Deleting an item using an index\\
+\hline
+\code{__iter__(self)} & \code{for x in self} & Iteration\\
+\hline
+\code{__contains__(self, value)} & \code{value in self}, \code{value not in self} & Membership tests using \code{in}\\
+\hline
+\code{__concat__(self, value)} & \code{self + other} & Concatenation of two sequences\\
+\hline
+\code{__call__(self [,...])} & \code{self(args)} & "Calling" an instance\\
+\hline
+\code{__enter__(self)} & \code{with self as x:} & \code{with} statement context managers\\
+\hline
+\code{__exit__(self, exc, val, trace)} & \code{with self as x:} & \code{with} statement context managers\\
+\hline
+\code{__getstate__(self)} & \code{pickle.dump(pkl_file, self)} & Pickling\\
+\hline
+\code{__setstate__(self)} & \code{data = pickle.load(pkl_file)} & Pickling\\
+\hline
+\end{tabular}
+\end{center}
+
 \end{document}
